Fixed Mandi Filter

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string-array name="settings_select_state">
+        <item>All</item>
         <item>Maharashtra</item>
         <item>Kerala</item>
         <item>Bihar</item>
