--- a/app/src/main/res/layout/element_style.xml
+++ b/app/src/main/res/layout/element_style.xml
@@ -2,13 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:divider="@color/black" >
+    android:divider="@color/black"
+    android:baselineAligned="false">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:orientation="vertical">
+        android:layout_weight="0.75"
+        android:orientation="vertical"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingEnd="16dp"
+        android:paddingRight="16dp">
 
         <TextView
             android:id="@+id/Vegetable"
@@ -16,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
+            android:textColor="#FFA500"
             android:text="Potato"
             android:textSize="20sp" />
 
@@ -23,22 +29,24 @@
             android:id="@+id/State"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Vegetable"
+            android:maxLines="1"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
+            android:textColor="#00FF00"
             android:text="State"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_weight="0.25"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/price"
+            android:textColor="#A020F0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -52,8 +60,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
+            android:textColor="#00FF00"
             android:text="Date"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
     </LinearLayout>
 
 
