--- a/app/src/main/res/layout/grid_member.xml
+++ b/app/src/main/res/layout/grid_member.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:id="@+id/product_item"
     android:layout_margin="5dp">
 
     <ImageView
