--- a/app/src/main/res/layout/activity_rented_product_list.xml
+++ b/app/src/main/res/layout/activity_rented_product_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".rented_product_list">
+    tools:context=".RentedProductList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rented_product_list"
