--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -32,12 +32,30 @@
                 android:layout_height="wrap_content"
                 android:text="Description" />
 
-            <TextView
-                android:id="@+id/prod_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Price" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/prod_price"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.7"
+                    android:layout_height="wrap_content"
+                    android:text="Price" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/requestButton"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.3"
+                    android:layout_height="wrap_content"
+                    android:text="Request"
+                    android:layout_marginEnd="20dp"
+                    />
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
