--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Renting.GiveOnRent.AddProduct">
+    tools:context=".Renting.GiveOnRent.ProductAddition.AddProduct">
 
     <LinearLayout
         android:id="@+id/image_view"
