--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,7 +34,6 @@
                     app:civ_border_color="#FF000000"
                     app:civ_border_width="2dp" />
 
-
                 <TextView
                     android:id="@+id/nameOfUser"
                     android:layout_width="wrap_content"
@@ -110,15 +109,26 @@
             app:layout_constraintTop_toBottomOf="@id/requestedProduct"/>
 
         <Button
+            android:id="@+id/logoutBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="35sp"
+            android:layout_marginBottom="32dp"
             android:drawableLeft="@drawable/logout"
             android:drawableTint="@color/white"
             android:text="Logout"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="48sp"
+            android:layout_height="50sp"
+            android:layout_marginBottom="32dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
