--- a/app/src/main/res/layout/fragment_give_on_rent.xml
+++ b/app/src/main/res/layout/fragment_give_on_rent.xml
@@ -13,9 +13,15 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product Rented List"
+            android:text="My Post's"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:padding="5dp"
+            android:textSize="20sp"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rented_product_list"
