--- a/app/src/main/res/layout/fragment_mandi.xml
+++ b/app/src/main/res/layout/fragment_mandi.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".MandiFragment">
 
+    <ProgressBar
+        android:id="@+id/mandiProgressBar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,6 +28,14 @@
             tools:listitem="@layout/mandi_price_item" >
         </androidx.recyclerview.widget.RecyclerView>
 
+        <TextView
+            android:id="@+id/failureText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="No data to display"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:visibility="invisible"/>
 
     </RelativeLayout>
 
