--- a/app/src/main/res/layout/mandi_price_item.xml
+++ b/app/src/main/res/layout/mandi_price_item.xml
@@ -10,18 +10,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.75"
         android:orientation="vertical"
-        android:paddingStart="16dp"
-        android:paddingLeft="16dp"
-        android:paddingEnd="16dp"
-        android:paddingRight="16dp">
+        android:paddingStart="10dp"
+        android:layout_marginStart="4dp"
+        android:paddingEnd="16dp">
 
         <TextView
             android:id="@+id/Vegetable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:textColor="#FFA500"
+            android:textColor="#0C2D48"
             android:text="Potato"
             android:textSize="20sp" />
 
@@ -30,9 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            android:textColor="#00FF00"
+            android:layout_marginTop="5dp"
+            android:textColor="#145DA0"
             android:text="State"
             android:textSize="16sp" />
 
@@ -46,7 +43,7 @@
 
         <TextView
             android:id="@+id/price"
-            android:textColor="#A020F0"
+            android:textColor="#2E8BC0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -59,8 +56,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="10dp"
-            android:textColor="#00FF00"
+            android:layout_marginTop="5dp"
+            android:textColor="#B1D4E0"
             android:text="Date"
             android:textSize="15sp" />
     </LinearLayout>
