--- a/app/src/main/res/drawable/pressure_washer.xml
+++ b/app/src/main/res/drawable/pressure_washer.xml
@@ -1,105 +1,51 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="512dp"
     android:height="512dp"
-    android:viewportWidth="256"
-    android:viewportHeight="256">
+    android:viewportWidth="64"
+    android:viewportHeight="64">
   <path
-      android:pathData="m187.25,226.75h-134.51c-7.99,0 -14.5,-6.5 -14.5,-14.5v-44.01c0,-7.99 6.5,-14.5 14.5,-14.5h39.5c0.83,0 1.5,0.67 1.5,1.5s-0.67,1.5 -1.5,1.5h-39.5c-6.34,0 -11.5,5.16 -11.5,11.5v44.01c0,6.34 5.16,11.5 11.5,11.5h134.51c6.34,0 11.5,-5.16 11.5,-11.5v-43.94c0,-0.83 0.67,-1.5 1.5,-1.5s1.5,0.67 1.5,1.5v43.94c0,7.99 -6.5,14.5 -14.5,14.5z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M30,56H6V26a2,2 0,0 1,2 -2h20a2,2 0,0 1,2 2z"
+      android:fillColor="#fab400"/>
   <path
-      android:pathData="m37.96,16.75s2.41,8.95 9.35,9.37c0,0 -9.27,3.2 -9.42,10.05 0,0 -1.82,-9.6 -9.14,-9.94 0,0 8.52,-1.29 9.21,-9.47z"
-      android:fillColor="#d6df58"/>
+      android:pathData="M18,40a6,6 0,0 0,-6 6v10h12V46a6,6 0,0 0,-6 -6z"
+      android:fillColor="#dc9600"/>
   <path
-      android:pathData="m37.89,37.67c-0.71,0 -1.34,-0.51 -1.47,-1.22 -0.02,-0.08 -1.7,-8.44 -7.74,-8.73 -0.77,-0.04 -1.39,-0.65 -1.43,-1.42 -0.04,-0.77 0.51,-1.44 1.27,-1.56 0.3,-0.05 7.36,-1.24 7.94,-8.11 0.06,-0.73 0.63,-1.3 1.36,-1.37 0.73,-0.07 1.39,0.4 1.58,1.1 0.02,0.08 2.23,7.92 7.99,8.27 0.71,0.04 1.3,0.58 1.4,1.29 0.1,0.71 -0.32,1.39 -1,1.62 -0.08,0.03 -8.28,2.95 -8.41,8.66 -0.02,0.77 -0.61,1.4 -1.38,1.46 -0.04,0 -0.08,0 -0.12,0zM33.37,26.14c2.11,1.33 3.52,3.39 4.45,5.28 1.38,-2.23 3.52,-3.87 5.36,-4.97 -2.29,-1.27 -3.88,-3.35 -4.94,-5.22 -1.17,2.29 -3.02,3.88 -4.87,4.92z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M18,47m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"
+      android:fillColor="#be7800"/>
   <path
-      android:pathData="m116.92,16.75h-6.95c-10.32,0 -18.72,8.4 -18.72,18.72v72.28c0,2.76 2.24,5 5,5s5,-2.24 5,-5v-43.12h52v43.12c0,2.76 2.24,5 5,5s5,-2.24 5,-5v-72.28c0,-10.32 -8.4,-18.72 -18.72,-18.72h-9.95m18.67,37.88h-52v-19.16c0,-4.81 3.91,-8.72 8.72,-8.72h34.56c4.81,0 8.72,3.91 8.72,8.72v19.16z"
-      android:fillColor="#87796f"/>
+      android:pathData="M30,52h-1.172a2,2 0,0 0,-1.414 0.586l-2.828,2.828a2,2 0,0 1,-1.414 0.586H12.828a2,2 0,0 1,-1.414 -0.586l-2.828,-2.828A2,2 0,0 0,7.172 52H6a2,2 0,0 0,-2 2v4a2,2 0,0 0,2 2h24a2,2 0,0 0,2 -2v-4a2,2 0,0 0,-2 -2z"
+      android:fillColor="#0a5078"/>
   <path
-      android:pathData="m158.25,114.25c-3.58,0 -6.5,-2.92 -6.5,-6.5v-41.62h-49v41.62c0,3.58 -2.92,6.5 -6.5,6.5s-6.5,-2.92 -6.5,-6.5v-72.28c0,-11.15 9.07,-20.22 20.22,-20.22h6.95c0.83,0 1.5,0.67 1.5,1.5s-0.67,1.5 -1.5,1.5h-6.95c-9.5,0 -17.22,7.73 -17.22,17.22v72.28c0,1.93 1.57,3.5 3.5,3.5s3.5,-1.57 3.5,-3.5v-43.12c0,-0.83 0.67,-1.5 1.5,-1.5h52c0.83,0 1.5,0.67 1.5,1.5v43.12c0,1.93 1.57,3.5 3.5,3.5s3.5,-1.57 3.5,-3.5v-72.28c0,-9.5 -7.73,-17.22 -17.22,-17.22h-9.95c-0.83,0 -1.5,-0.67 -1.5,-1.5s0.67,-1.5 1.5,-1.5h9.95c11.15,0 20.22,9.07 20.22,20.22v72.28c0,3.58 -2.92,6.5 -6.5,6.5zM153.25,56.13h-52c-0.83,0 -1.5,-0.67 -1.5,-1.5v-19.16c0,-5.64 4.59,-10.22 10.22,-10.22h34.56c5.64,0 10.22,4.59 10.22,10.22v19.16c-0,0.83 -0.67,1.5 -1.5,1.5zM102.75,53.13h49v-17.66c0,-3.98 -3.24,-7.22 -7.22,-7.22h-34.56c-3.98,0 -7.22,3.24 -7.22,7.22v17.66z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M25,30H11a1,1 0,0 1,0 -2h14a1,1 0,0 1,0 2zM25,34H11a1,1 0,0 1,0 -2h14a1,1 0,0 1,0 2zM25,38H11a1,1 0,0 1,0 -2h14a1,1 0,0 1,0 2z"
+      android:fillColor="#be7800"/>
   <path
-      android:pathData="m71.19,197.25h112.12c3.83,0 6.94,3.11 6.94,6.94v28.12c0,3.83 -3.11,6.94 -6.94,6.94h-112.12c-3.83,0 -6.94,-3.11 -6.94,-6.94v-28.12c0,-3.83 3.11,-6.94 6.94,-6.94z"
-      android:fillColor="#87796f"/>
+      android:pathData="M22,8h-8c-3.309,0 -6,2.691 -6,6v10h4v-4h12v4h4L28,14c0,-3.309 -2.691,-6 -6,-6zM12,16v-2c0,-1.103 0.897,-2 2,-2h8c1.103,0 2,0.897 2,2v2z"
+      android:fillColor="#0a5078"/>
   <path
-      android:pathData="m183.31,240.75h-112.12c-4.66,0 -8.44,-3.79 -8.44,-8.44v-28.11c0,-4.66 3.79,-8.44 8.44,-8.44h112.12c4.66,0 8.44,3.79 8.44,8.44v28.11c0,4.66 -3.79,8.44 -8.44,8.44zM71.19,198.75c-3,0 -5.44,2.44 -5.44,5.44v28.11c0,3 2.44,5.44 5.44,5.44h112.12c3,0 5.44,-2.44 5.44,-5.44v-28.11c0,-3 -2.44,-5.44 -5.44,-5.44z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M18,46m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"
+      android:fillColor="#c80a50"/>
   <path
-      android:pathData="m164.39,97.25h-74.29c-7.38,0 -13.36,5.98 -13.36,13.36v128.64h101v-128.64c0,-7.38 -5.98,-13.36 -13.36,-13.36z"
-      android:fillColor="#f29c1f"/>
+      android:pathData="M24,46h6v2h-6z"
+      android:fillColor="#dc9600"/>
   <path
-      android:pathData="m177.75,240.75h-101c-0.83,0 -1.5,-0.67 -1.5,-1.5v-128.64c0,-8.19 6.66,-14.86 14.86,-14.86h74.29c8.19,0 14.86,6.66 14.86,14.86v128.64c0,0.83 -0.67,1.5 -1.5,1.5zM78.25,237.75h98v-127.14c0,-6.54 -5.32,-11.86 -11.86,-11.86h-74.29c-6.54,0 -11.86,5.32 -11.86,11.86z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M24,46v2h-2.54c0.34,-0.59 0.54,-1.27 0.54,-2z"
+      android:fillColor="#be7800"/>
   <path
-      android:pathData="m164.39,97.25h-74.29c-7.38,0 -13.36,5.98 -13.36,13.36v128.64h101v-128.64c0,-7.38 -5.98,-13.36 -13.36,-13.36z"
-      android:fillColor="#f29c1f"/>
+      android:pathData="M22,46c0,0.73 -0.2,1.41 -0.54,2H18c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1z"
+      android:fillColor="#a00028"/>
   <path
-      android:pathData="m177.75,240.75h-101c-0.83,0 -1.5,-0.67 -1.5,-1.5v-128.64c0,-8.19 6.66,-14.86 14.86,-14.86h74.29c8.19,0 14.86,6.66 14.86,14.86v128.64c0,0.83 -0.67,1.5 -1.5,1.5zM78.25,237.75h98v-127.14c0,-6.54 -5.32,-11.86 -11.86,-11.86h-74.29c-6.54,0 -11.86,5.32 -11.86,11.86z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M30,47H18a1,1 0,1 1,0 -2h12c2.757,0 5,-2.243 5,-5V12c0,-3.859 3.14,-7 7,-7h6a1,1 0,1 1,0 2h-6c-2.757,0 -5,2.243 -5,5v28c0,3.859 -3.14,7 -7,7zM53,32h2v17h-2z"
+      android:fillColor="#0a5078"/>
   <path
-      android:pathData="m94.75,172.67v66.58h65v-142h-65v57.08z"
-      android:fillColor="#f29c1f"/>
+      android:pathData="M55,4h-7c-1.654,0 -3,1.346 -3,3v5a1,1 0,0 0,0.757 0.97L52,14.53L52,31a1,1 0,0 0,1 1h2a1,1 0,0 0,1 -1L56,5a1,1 0,0 0,-1 -1zM47,11.219L47,8h5v4.469z"
+      android:fillColor="#c80a50"/>
   <path
-      android:pathData="m159.75,240.75h-65c-0.83,0 -1.5,-0.67 -1.5,-1.5v-66.58c0,-0.83 0.67,-1.5 1.5,-1.5s1.5,0.67 1.5,1.5v65.08h62v-139h-62v55.58c0,0.83 -0.67,1.5 -1.5,1.5s-1.5,-0.67 -1.5,-1.5v-57.08c0,-0.83 0.67,-1.5 1.5,-1.5h65c0.83,0 1.5,0.67 1.5,1.5v142c0,0.83 -0.67,1.5 -1.5,1.5z"
-      android:fillColor="#3a312a"/>
+      android:pathData="M55,53h-2a1,1 0,0 1,-1 -1v-4a1,1 0,0 1,1 -1h2a1,1 0,0 1,1 1v4a1,1 0,0 1,-1 1z"
+      android:fillColor="#fab400"/>
   <path
-      android:pathData="m145.25,97.25h-36v43c0,9.94 8.06,18 18,18 9.94,0 18,-8.06 18,-18z"
-      android:fillColor="#87796f"/>
+      android:pathData="M54,59a1,1 0,0 1,-1 -1v-2a1,1 0,1 1,2 0v2a1,1 0,0 1,-1 1zM49,58a0.999,0.999 0,0 1,-0.707 -1.707l1,-1a0.999,0.999 0,1 1,1.414 1.414l-1,1A0.997,0.997 0,0 1,49 58zM59,58a0.997,0.997 0,0 1,-0.707 -0.293l-1,-1a0.999,0.999 0,1 1,1.414 -1.414l1,1A0.999,0.999 0,0 1,59 58z"
+      android:fillColor="#00a0c8"/>
   <path
-      android:pathData="m127.25,159.75c-10.75,0 -19.5,-8.75 -19.5,-19.5v-43c0,-0.83 0.67,-1.5 1.5,-1.5h36c0.83,0 1.5,0.67 1.5,1.5v43c0,10.75 -8.75,19.5 -19.5,19.5zM110.75,98.75v41.5c0,9.1 7.4,16.5 16.5,16.5s16.5,-7.4 16.5,-16.5v-41.5z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m57.25,93.25h19.5v32.12l-19.5,-8.62z"
-      android:fillColor="#8ac5dc"/>
-  <path
-      android:pathData="m76.75,126.87c-0.21,0 -0.41,-0.04 -0.61,-0.13l-19.5,-8.62c-0.54,-0.24 -0.89,-0.78 -0.89,-1.37v-23.5c0,-0.83 0.67,-1.5 1.5,-1.5h19.5c0.83,0 1.5,0.67 1.5,1.5v32.12c0,0.51 -0.26,0.98 -0.68,1.26 -0.25,0.16 -0.53,0.24 -0.82,0.24zM58.75,115.77 L75.25,123.06v-28.31h-16.5z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m146.5,225.25v-9h-38.5v9h-31.25v14h101v-14z"
-      android:fillColor="#ed6e7a"/>
-  <path
-      android:pathData="m177.75,240.75h-101c-0.83,0 -1.5,-0.67 -1.5,-1.5v-14c0,-0.83 0.67,-1.5 1.5,-1.5h29.75v-7.5c0,-0.83 0.67,-1.5 1.5,-1.5h38.5c0.83,0 1.5,0.67 1.5,1.5v7.5h29.75c0.83,0 1.5,0.67 1.5,1.5v14c0,0.83 -0.67,1.5 -1.5,1.5zM78.25,237.75h98v-11h-29.75c-0.83,0 -1.5,-0.67 -1.5,-1.5v-7.5h-35.5v7.5c0,0.83 -0.67,1.5 -1.5,1.5h-29.75z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m59.66,26.43s3.41,12.66 13.22,13.25c0,0 -13.1,4.53 -13.32,14.2 0,0 -2.58,-13.57 -12.93,-14.06 0,0 12.05,-1.83 13.02,-13.39z"
-      android:fillColor="#d6df58"/>
-  <path
-      android:pathData="m59.56,55.38c-0.71,0 -1.34,-0.51 -1.47,-1.22 -0.02,-0.13 -2.49,-12.42 -11.52,-12.84 -0.77,-0.04 -1.39,-0.65 -1.43,-1.42 -0.04,-0.77 0.51,-1.44 1.27,-1.56 0.44,-0.07 10.89,-1.82 11.75,-12.03 0.06,-0.73 0.63,-1.3 1.36,-1.37 0.74,-0.05 1.39,0.4 1.58,1.1 0.03,0.12 3.26,11.63 11.86,12.14 0.71,0.04 1.3,0.58 1.4,1.29 0.1,0.71 -0.32,1.39 -0.99,1.62 -0.12,0.04 -12.12,4.31 -12.31,12.82 -0.02,0.77 -0.61,1.4 -1.37,1.46 -0.04,0 -0.09,0 -0.13,0zM51.82,39.65c3.88,1.97 6.23,5.75 7.59,8.88 2.03,-4.02 5.94,-6.79 8.95,-8.43 -4.13,-1.84 -6.78,-5.65 -8.33,-8.72 -1.79,4.36 -5.27,6.87 -8.2,8.27z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m37.96,43.41s2.41,8.95 9.35,9.37c0,0 -9.27,3.2 -9.42,10.05 0,0 -1.82,-9.6 -9.14,-9.94 0,0 8.52,-1.29 9.21,-9.47z"
-      android:fillColor="#d6df58"/>
-  <path
-      android:pathData="m37.89,64.32c-0.71,0 -1.34,-0.51 -1.47,-1.22 -0.02,-0.08 -1.7,-8.44 -7.74,-8.73 -0.77,-0.04 -1.39,-0.65 -1.43,-1.42 -0.04,-0.77 0.51,-1.44 1.27,-1.56 0.3,-0.05 7.36,-1.24 7.94,-8.11 0.06,-0.73 0.63,-1.3 1.36,-1.37 0.73,-0.06 1.39,0.4 1.58,1.1 0.02,0.08 2.23,7.92 7.99,8.27 0.71,0.04 1.3,0.58 1.4,1.29 0.1,0.71 -0.32,1.39 -1,1.62 -0.08,0.03 -8.28,2.95 -8.41,8.66 -0.02,0.77 -0.61,1.4 -1.38,1.46 -0.04,0 -0.08,0.01 -0.12,0.01zM33.37,52.79c2.11,1.33 3.52,3.39 4.45,5.28 1.38,-2.23 3.52,-3.87 5.36,-4.97 -2.29,-1.27 -3.88,-3.35 -4.94,-5.22 -1.17,2.29 -3.02,3.88 -4.87,4.92z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="M127.25,138.75m-11,0a11,11 0,1 1,22 0a11,11 0,1 1,-22 0"
-      android:fillColor="#ed6e7a"/>
-  <path
-      android:pathData="m127.25,151.25c-6.89,0 -12.5,-5.61 -12.5,-12.5s5.61,-12.5 12.5,-12.5 12.5,5.61 12.5,12.5 -5.61,12.5 -12.5,12.5zM127.25,129.25c-5.24,0 -9.5,4.26 -9.5,9.5s4.26,9.5 9.5,9.5 9.5,-4.26 9.5,-9.5 -4.26,-9.5 -9.5,-9.5z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="M127.75,187.75m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0"
-      android:fillColor="#f5e1c5"/>
-  <path
-      android:pathData="m127.75,197.25c-5.24,0 -9.5,-4.26 -9.5,-9.5s4.26,-9.5 9.5,-9.5 9.5,4.26 9.5,9.5 -4.26,9.5 -9.5,9.5zM127.75,181.25c-3.58,0 -6.5,2.92 -6.5,6.5s2.92,6.5 6.5,6.5 6.5,-2.92 6.5,-6.5 -2.92,-6.5 -6.5,-6.5z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m227.25,21.26c0,1.3 -0.56,2.54 -1.54,3.39l-21.49,18.78v130.84c0,2.2 -1.78,3.98 -3.98,3.98 -2.2,0 -3.98,-1.78 -3.98,-3.98v-148.07l24.94,-9.16c0.52,-0.19 1.04,-0.28 1.56,-0.28 2.39,0 4.5,1.93 4.5,4.51z"
-      android:fillColor="#87796f"/>
-  <path
-      android:pathData="m200.24,179.75c-3.03,0 -5.49,-2.46 -5.49,-5.49v-148.07c0,-0.63 0.39,-1.19 0.98,-1.41l24.94,-9.16c0.68,-0.25 1.37,-0.37 2.08,-0.37 3.31,0 6,2.7 6,6.01 0,1.74 -0.75,3.39 -2.06,4.52l-20.97,18.33v130.15c0,3.03 -2.46,5.49 -5.49,5.49zM197.75,27.24v147.03c0,1.37 1.12,2.48 2.48,2.48 1.37,0 2.48,-1.12 2.48,-2.48v-130.83c0,-0.43 0.19,-0.85 0.51,-1.13l21.49,-18.78c0.65,-0.57 1.03,-1.39 1.03,-2.26 0,-1.66 -1.35,-3.01 -3,-3.01 -0.36,0 -0.7,0.06 -1.04,0.19z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m209.25,97.75v16.5h-31.5v21l38.5,-8.5v-29c0,-1.93 -1.57,-3.5 -3.5,-3.5 -1.93,0 -3.5,1.57 -3.5,3.5z"
-      android:fillColor="#8ac5dc"/>
-  <path
-      android:pathData="m177.75,136.75c-0.34,0 -0.67,-0.11 -0.94,-0.33 -0.35,-0.28 -0.56,-0.71 -0.56,-1.17v-21c0,-0.83 0.67,-1.5 1.5,-1.5h30v-15c0,-2.76 2.24,-5 5,-5s5,2.24 5,5v29c0,0.7 -0.49,1.31 -1.18,1.47l-38.5,8.5c-0.11,0.02 -0.22,0.04 -0.32,0.04zM179.25,115.75v17.63l35.5,-7.84v-27.8c0,-1.1 -0.9,-2 -2,-2s-2,0.9 -2,2v16.5c0,0.83 -0.67,1.5 -1.5,1.5z"
-      android:fillColor="#3a312a"/>
-  <path
-      android:pathData="m164.39,98.75h-3.14v125h15v-88.5,-21 -3.64c0,-6.54 -5.32,-11.86 -11.86,-11.86z"
-      android:fillColor="#e57e25"/>
-  <path
-      android:pathData="m161.25,226.75h15v11h-15z"
-      android:fillColor="#d34e5c"/>
+      android:pathData="M8,23h4v1H8zM24,23h4v1h-4zM53,32h2v1h-2z"
+      android:fillColor="#00325a"/>
 </vector>
