--- a/app/src/main/res/layout/activity_rented_product_list.xml
+++ b/app/src/main/res/layout/activity_rented_product_list.xml
@@ -6,11 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".Renting.TakeOnRent.RentedProductList">
 
+    <ProgressBar
+        android:id="@+id/mandiProgressBar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rented_product_list"
         android:layout_width="match_parent"
+        android:layout_marginTop="3dp"
         android:layout_height="match_parent"
         tools:listitem="@layout/product_item">
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/failureText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="No product added by other"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
