--- a/app/src/main/res/layout/fragment_take_on_rent.xml
+++ b/app/src/main/res/layout/fragment_take_on_rent.xml
@@ -7,10 +7,11 @@
 
     <GridView
         android:id="@+id/gridTools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:numColumns="3"
-            android:horizontalSpacing="10dp"
-            android:verticalSpacing="10dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
+        android:horizontalSpacing="10dp"
+        android:numColumns="3"
+        android:verticalSpacing="10dp" />
 
 </FrameLayout>
