--- a/app/src/main/res/drawable/rectangular_border.xml
+++ b/app/src/main/res/drawable/rectangular_border.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="#C0C0C0" android:dashWidth="15dp" android:dashGap="25dp" />
+            <stroke android:width="1dp" android:color="#C0C0C0" />
         </shape>
     </item>
 </selector>
