--- a/app/src/main/res/layout/activity_product_request.xml
+++ b/app/src/main/res/layout/activity_product_request.xml
@@ -10,49 +10,70 @@
         android:id="@+id/product_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_margin="8sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="5sp">
 
             <ImageView
                 android:id="@+id/product_img"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/irrigation"
-                android:contentDescription="Product Image" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5sp"
+                android:contentDescription="Product Image"
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/prod_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Product name" />
+                android:padding="2sp"
+                android:text="Product name"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/prod_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description" />
+                android:padding="2sp"
+                android:text="Description"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/prod_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price" />
+                android:padding="2sp"
+                android:text="Price"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/emptyRequestTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/product_detail" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/person_request_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/product_detail"
-        tools:listitem="@layout/person_request_item">
-    </androidx.recyclerview.widget.RecyclerView>
+        tools:layout_editor_absoluteX="-74dp"
+        tools:listitem="@layout/person_request_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
