--- a/app/src/main/res/layout/mandi_price_item.xml
+++ b/app/src/main/res/layout/mandi_price_item.xml
@@ -44,7 +44,7 @@
         <TextView
             android:id="@+id/price"
             android:textColor="#2E8BC0"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
