--- a/app/src/main/res/layout/fragment_give_on_rent.xml
+++ b/app/src/main/res/layout/fragment_give_on_rent.xml
@@ -27,14 +27,13 @@
             android:id="@+id/postProgressBar"
             android:layout_width="40sp"
             android:layout_height="40sp"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name" />
 
         <TextView
-            android:id="@+id/emptyPostTv"
+            android:id="@+id/failurePostTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="invisible"
