--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,30 +6,43 @@
     tools:context=".HomeFragment">
 
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@id/button2"
         android:layout_centerInParent="true"
-        android:id="@+id/button"
+        android:layout_margin="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/btn_bg"
         android:text="Take Picture"
         android:textAllCaps="false"
-        android:layout_above="@id/button2"
         android:textSize="21sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
+
     <Button
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/btn_bg"
+        android:layout_margin="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_centerInParent="true"
-        android:id="@+id/button2"
         android:text="Launch Gallery"
         android:textAllCaps="false"
-        android:layout_alignParentBottom="true"
         android:textSize="21sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
     <ImageView
         android:layout_width="370sp"
         android:layout_height="370sp"
+        android:src="@drawable/gallery"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        android:background="@drawable/rectangular_border"
         android:layout_centerHorizontal="true"
         android:id="@+id/imageView"
         android:layout_marginTop="10sp"
